force-app/main/default/objects/Category__c/Category__c.object-meta.xml
<CustomObject>
    <label>Category</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>