force-app/main/default/objects/Category__c/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <label>Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>