force-app/main/default/objects/Category__c/fields/MemberType__c.field-meta.xml
<CustomField>
    <fullName>MemberType__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USERS</fullName>
                <label>Users</label>
            </value>
            <value>
                <fullName>GROUPS</fullName>
                <label>Groups</label>
            </value>
            <value>
                <fullName>PROFILES</fullName>
                <label>Profiles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>