force-app/main/default/objects/Category__c/fields/NumOfUsers__c.field-meta.xml
<CustomField>
    <fullName>NumOfUsers__c</fullName>
    <label>Number of Users</label>
    <summaryForeignKey>CategoryMember__c.Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>